--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "email": "feedback@startbootstrap.com"
   },
   "scripts": {
-    "start": "node app",
+    "start": "gulp dev",
     "postinstall": "gulp default"
   },
   "license": "MIT",
@@ -30,6 +30,12 @@
     "url": "https://github.com/BlackrockDigital/startbootstrap-resume.git"
   },
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "3.9.0",
+    "gulp-header": "1.8.9",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "3.0.0",
     "bootstrap": "^4.0.0-beta.2",
     "devicons": "^1.8.0",
     "jquery": "^3.2.1",
